# server

./: .gitignore  .results.json  Cargo.toml  README.md
.graphql/: context.json  schema_request.txt
src/: address.rs  api.rs  category.rs  chrome.rs  emergency_contact.rs  hello_asso.rs  http_client.rs  lib.rs  main.rs  mycompet.rs  myffme.rs  order.rs  season.rs  update.rs  user.rs
src/mycompet/: mod.rs  results.rs
src/myffme/: address.rs  document.rs  email.rs  health_questionnaire.rs  license.rs  licensee.rs  me.rs  medical_certificate.rs  member.rs  mod.rs  options.rs  price.rs  prices.rs  product.rs  structure.rs
src/myffme/graphql/: address.rs  email.rs  health_questionnaire.rs  license.rs  medical_certificate.rs  member.rs  mod.rs  options.rs  price.rs  product.rs  structure.rs  update_address.rs
src/tools/: add_license_numbers.rs  add_user_insee.rs  add_users_insee.rs  add_users_metadata.rs  update_address.rs  update_users_metadata.rs
